<resources>
    <string name="app_name">Walter</string>

    <!-- Home screen -->
    <string name="home_income_text">R$ 0,00</string>
    <string name="home_income_description">Income</string>
    <string name="home_expense_text">R$ 0,00</string>
    <string name="home_expense_description">Expenses</string>
    <string name="home_investment_text">R$ 0,00</string>
    <string name="home_investment_description">Investments</string>
    <string name="home_balance_text">R$ 0,00</string>
    <string name="home_balance_description">Balance</string>
    <string name="home_summary_text">Summary</string>
    <string name="home_settings_text">Settings</string>
    <string name="home_accessibility_summary_option">Summary option</string>
    <string name="home_accessibility_settings_option">Settings option</string>
    <string name="home_accessibility_logo">App logo</string>
    <!-- Home screen -->

    <!-- Add transaction screen -->
    <string name="addtransaction_default_title">Transaction</string>
    <string name="addtransaction_income_title">Income</string>
    <string name="addtransaction_expense_title">Expense</string>
    <string name="addtransaction_investment_title">Investment</string>
    <string name="addtransaction_income_option">Income</string>
    <string name="addtransaction_expense_option">Expense</string>
    <string name="addtransaction_investment_option">Investment</string>
    <string name="addtransaction_default_button">Add expense</string>
    <string name="addtransaction_income_button">Add income</string>
    <string name="addtransaction_expense_button">Add expense</string>
    <string name="addtransaction_investment_button">Add investment</string>
    <string name="addtransaction_value_field">Value</string>
    <string name="addtransaction_category_field">Category</string>
    <string name="addtransaction_date_field">Date</string>
    <string name="addtransaction_description_field">Description</string>
    <string name="addtransaction_category_dialog_title">Categories</string>
    <string name="addtransaction_category_dialog_message">Error!</string>
    <string name="addtransaction_value_validation_error">Valor deve ser maior que 0</string>
    <string name="addtransaction_category_validation_error">Selecione uma categoria</string>
    <string name="addtransaction_date_validation_error">Selecione uma data</string>
    <string name="addtransaction_description_validation_error">Insira uma descrição</string>
    <string name="addtransaction_save_success">Transaction saved successfully!</string>
    <string name="addtransaction_save_failure">Failed to save transaction. Try again.</string>
    <!-- Add transaction screen -->
</resources>
