<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".features.home.presentation.HomeActivity">

    <!-- Sidebar region -->
    <View
        android:id="@+id/home_summary_option"
        android:layout_width="70dp"
        android:layout_height="92dp"
        android:background="#474b4c"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/home_income_section"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_summary_icon"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/home_accessibility_summary_option"
        android:src="@drawable/ic_format_list_bulleted_white_24dp"
        android:tint="#cccccc"
        app:layout_constraintBottom_toTopOf="@id/home_summary_text"
        app:layout_constraintLeft_toLeftOf="@id/home_summary_option"
        app:layout_constraintRight_toRightOf="@id/home_summary_option"
        app:layout_constraintTop_toTopOf="@id/home_summary_option"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/home_summary_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="@string/home_summary_text"
        android:textAlignment="center"
        android:textColor="#999999"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/home_summary_option"
        app:layout_constraintLeft_toLeftOf="@id/home_summary_option"
        app:layout_constraintRight_toRightOf="@id/home_summary_option"
        app:layout_constraintTop_toBottomOf="@id/home_summary_icon" />

    <View
        android:id="@+id/intro_settings_option"
        android:layout_width="76dp"
        android:layout_height="92dp"
        android:layout_marginTop="1dp"
        android:background="#474b4c"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/home_income_section"
        app:layout_constraintTop_toBottomOf="@id/home_summary_option" />

    <ImageView
        android:id="@+id/intro_settings_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/home_accessibility_settings_option"
        android:src="@drawable/ic_settings_white_24dp"
        android:tint="#cccccc"
        app:layout_constraintBottom_toTopOf="@id/home_settings_text"
        app:layout_constraintLeft_toLeftOf="@id/intro_settings_option"
        app:layout_constraintRight_toRightOf="@id/intro_settings_option"
        app:layout_constraintTop_toTopOf="@id/intro_settings_option"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/home_settings_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="@string/home_settings_text"
        android:textAlignment="center"
        android:textColor="#999999"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/intro_settings_option"
        app:layout_constraintLeft_toLeftOf="@id/intro_settings_option"
        app:layout_constraintRight_toRightOf="@id/intro_settings_option"
        app:layout_constraintTop_toBottomOf="@id/intro_settings_icon" />

    <View
        android:id="@+id/home_sidebar"
        android:layout_width="76dp"
        android:layout_height="0dp"
        android:background="#474b4c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/home_income_section"
        app:layout_constraintTop_toBottomOf="@id/intro_settings_option" />

    <ImageView
        android:id="@+id/intro_logo"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/home_accessibility_logo"
        android:src="@drawable/ic_add_white_24dp"
        android:tint="#474b4c"
        app:layout_constraintBottom_toBottomOf="@id/home_sidebar"
        app:layout_constraintLeft_toLeftOf="@id/home_sidebar"
        app:layout_constraintRight_toRightOf="@id/home_sidebar" />
    <!-- -->

    <!-- Income region -->
    <View
        android:id="@+id/home_income_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_border_right_income"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/home_expenses_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_summary_option"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_income_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="bottom|end"
        android:text="@string/home_income_description"
        android:textAllCaps="true"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/home_income_text"
        app:layout_constraintRight_toRightOf="@id/home_income_section"
        app:layout_constraintTop_toTopOf="@id/home_income_section"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/home_income_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/home_income_text"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="#72e635"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/home_income_section"
        app:layout_constraintRight_toRightOf="@id/home_income_section"
        app:layout_constraintTop_toBottomOf="@id/home_income_description" />
    <!-- endregion -->

    <!-- Expense region -->
    <View
        android:id="@+id/home_expenses_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_border_right_expense"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/home_investments_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_summary_option"
        app:layout_constraintTop_toBottomOf="@id/home_income_section" />

    <TextView
        android:id="@+id/home_expenses_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="bottom|end"
        android:text="@string/home_expense_description"
        android:textAllCaps="true"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/home_expenses_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_expenses_section"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/home_expenses_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/home_expense_text"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="#ffb000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/home_expenses_section"
        app:layout_constraintRight_toRightOf="@id/home_expenses_section"
        app:layout_constraintTop_toBottomOf="@id/home_expenses_description" />
    <!-- endregion -->

    <!-- Investment region -->
    <View
        android:id="@+id/home_investments_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_border_right_investment"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_summary_option"
        app:layout_constraintTop_toBottomOf="@id/home_expenses_section" />

    <TextView
        android:id="@+id/home_investments_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="bottom|end"
        android:text="@string/home_investment_description"
        android:textAllCaps="true"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/home_investments_description"
        app:layout_constraintRight_toRightOf="@id/home_investments_section"
        app:layout_constraintTop_toTopOf="@id/home_investments_section"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/home_investments_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/home_investment_text"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="@color/colorInvestment"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/home_investments_section"
        app:layout_constraintRight_toRightOf="@id/home_investments_section"
        app:layout_constraintTop_toBottomOf="@id/home_investments_text" />
    <!-- endregion -->

</androidx.constraintlayout.widget.ConstraintLayout>