<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".features.transactions.presentation.AddTransactionActivity">

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/addtransaction_transaction_type_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sc_tint_color="@color/colorExpense">

        <RadioButton
            android:id="@+id/addtransaction_expense_option"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/addtransaction_expense_option" />

        <RadioButton
            android:id="@+id/addtransaction_income_option"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/addtransaction_income_option" />

        <RadioButton
            android:id="@+id/addtransaction_investment_option"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/addtransaction_investment_option" />

    </info.hoang8f.android.segmented.SegmentedGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addtransaction_value_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/addtransaction_value_field"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintStart_toStartOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintTop_toBottomOf="@id/addtransaction_transaction_type_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addtransaction_value_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addtransaction_category_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/addtransaction_category_field"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintStart_toStartOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintTop_toBottomOf="@id/addtransaction_value_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addtransaction_category_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
            android:drawableTint="@color/colorSecondaryText"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:maxLines="1"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addtransaction_date_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/addtransaction_date_field"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintStart_toStartOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintTop_toBottomOf="@id/addtransaction_category_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addtransaction_date_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_date_range_white_24dp"
            android:drawableTint="@color/colorSecondaryText"
            android:focusable="false"
            android:inputType="none"
            android:longClickable="false"
            android:maxLines="1"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addtransaction_description_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/addtransaction_description_field"
        android:theme="@style/TextInputLayoutAppearance"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintStart_toStartOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintTop_toBottomOf="@id/addtransaction_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addtransaction_description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addtransaction_add_button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/addtransaction_default_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/addtransaction_transaction_type_group"
        app:layout_constraintStart_toStartOf="@id/addtransaction_transaction_type_group" />

</androidx.constraintlayout.widget.ConstraintLayout>